--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Simon</title>
+        <title>Simon</title>
+        <link rel="stylesheet" href="style.css">
 		<script defer src="game-board.js"></script>
 	</head>
 	<body>
@@ -18,14 +19,15 @@
 					<div class="game-board">
 						<button class="game-button green"></button>
 						<button class="game-button red"></button>
-						<button class="game-button blue"></button>
 						<button class="game-button yellow"></button>
-					</div>
-					<div class="game-controls-container">
-						<h3 class="game-logo"></h3>
-						<p class="difficulty-level"></p>
-						<button class="set-difficulty"></button>
-						<button class="reset"></button>
+						<button class="game-button blue"></button>
+                        <div class="game-controls-container">
+                            <h3 class="game-logo">SIMON</h3>
+                            <p class="difficulty-level">Difficulty Level</p>
+                            <div class="difficulty-display">1</div>
+                            <button class="set-difficulty"></button>
+                            <button class="reset"></button>
+                        </div>
 					</div>
 				</section>
 			</section>
