Game controls initial layout

--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
 		<main>
 			<section class="game-area">
 				<section class="score-board"></section>
-				<section class="game-board-container">
-					<div class="game-board">
+				<div class="game-board-container">
+					<section class="game-board">
 						<button class="game-button green"></button>
 						<button class="game-button red"></button>
 						<button class="game-button yellow"></button>
 						<button class="game-button blue"></button>
-                        <div class="game-controls-container">
+                        <section class="game-controls-container">
                             <h3 class="game-logo">SIMON</h3>
-                            <p class="difficulty-level">Difficulty Level</p>
-                            <div class="difficulty-display">1</div>
-                            <button class="set-difficulty"></button>
-                            <button class="reset"></button>
-                        </div>
-					</div>
-				</section>
+                            <section class="difficulty">
+                                <p class="difficulty-label">Difficulty Level</p>
+                                <div class="difficulty-display">#</div>
+                            </section>
+                            <button class="set-difficulty-button">Set Difficulty</button>
+                            <button class="reset-button">Reset</button>
+                        </section>
+					</section>
+				</div>
 			</section>
 		</main>
 	</body>
