Linked game-logic.js to index. Pseudo game process outline

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Simon</title>
 		<link rel="stylesheet" href="style.css" />
 		<script defer src="game-board-effects.js"></script>
+		<script src="game-logic.js"></script>
 	</head>
 	<body>
 		<header>
