--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Simon</title>
 		<link rel="stylesheet" href="style.css" />
 		<script defer src="game-board-effects.js"></script>
-		<script src="game-logic.js"></script>
+		<script defer src="game-logic.js"></script>
 	</head>
 	<body>
 		<header>
@@ -14,22 +14,32 @@
 			<h2>Repeat after me . . .</h2>
 		</header>
 		<main>
+			<section class="instruction-modal">
+				<h2>How to play Simon</h2>
+				<p>SIMON INSTRUCTIONS</p>
+				<div class="modal-footer">
+					<button class="play-button">Let's Play!</button>
+				</div>
+			</section>
 			<section class="game-area">
 				<section class="score-board"></section>
 				<section class="game-board-container">
 					<div class="game-board">
-						<div class="game-button green"></div>
-						<div class="game-button red"></div>
-						<div class="game-button yellow"></div>
-						<div class="game-button blue"></div>
+						<div class="game-button green" id="1"></div>
+						<div class="game-button red" id="2"></div>
+						<div class="game-button yellow" id="3"></div>
+						<div class="game-button blue" id="4"></div>
 						<section class="game-controls-container">
 							<h3 class="game-logo">SIMON</h3>
 							<section class="difficulty">
 								<p class="difficulty-label">Difficulty Level</p>
 								<div class="difficulty-display">#</div>
 							</section>
-							<button class="set-difficulty-button">Set Difficulty</button>
-							<button class="reset-button">Reset</button>
+							<div class="button-container">
+								<button class="set-difficulty-button">Set Difficulty</button>
+								<button class="reset-button">Reset</button>
+								<button class="open-instructions">Instructions</button>
+							</div>
 						</section>
 					</div>
 				</section>
