--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 			<section class="instruction-modal">
 				<h2>How to play Simon</h2>
 				<p>SIMON INSTRUCTIONS</p>
-				<div class="modal-footer">
-					<button class="play-button">Let's Play!</button>
-				</div>
+				<div class="modal-footer"></div>
 			</section>
 			<section class="game-area">
-				<section class="score-board"></section>
+				<section class="score-board">
+					<p class="score">Score: <span class="current-score-value"></span></p>
+					<p class="top-score">
+						Top Score: <span class="top-score-value"></span>
+					</p>
+				</section>
 				<section class="game-board-container">
 					<div class="game-board">
 						<div class="game-button green" id="1"></div>
@@ -36,9 +39,10 @@
 								<div class="difficulty-display">#</div>
 							</section>
 							<div class="button-container">
-								<button class="set-difficulty-button">Set Difficulty</button>
-								<button class="reset-button">Reset</button>
-								<button class="open-instructions">Instructions</button>
+								<li class="play-button">Start</li>
+								<li class="set-difficulty-button">Difficulty</li>
+								<li class="reset-button">Reset</li>
+								<li class="open-instructions">Instructions</li>
 							</div>
 						</section>
 					</div>
