Added game-mode functionality with Reverse Mode Option

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<p class="game-mode-label">Game Mode</p>
 								<p class="difficulty-label">Difficulty</p>
 								<div class="digital-display">
-									<li class="game-mode">Standard</li>
+									<li class="game-mode"></li>
 									<li class="difficulty-level">#</li>
 								</div>
 							</section>
