--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Simon</title>
+		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" />
 		<script defer src="game-board-effects.js"></script>
 		<script defer src="game-logic.js"></script>
@@ -36,20 +37,22 @@
 						<div class="game-button yellow" id="3"></div>
 						<div class="game-button blue" id="4"></div>
 						<section class="game-controls-container">
-							<h3 class="game-logo">SIMON</h3>
-							<section class="info-center">
-								<p class="game-mode-label">Game Mode</p>
-								<p class="difficulty-label">Difficulty</p>
-								<div class="digital-display">
-									<li class="game-mode"></li>
-									<li class="difficulty-level">#</li>
-								</div>
-							</section>
-							<div class="button-container">
-								<li class="play-button">Start</li>
-								<li class="set-difficulty-button">Difficulty</li>
-								<li class="reset-button">Reset</li>
-								<li class="game-mode-button">Mode</li>
+							<div class="game-controls">
+								<h3 class="game-logo">SIMON</h3>
+								<section class="info-center">
+									<p class="game-mode-label">Game Mode</p>
+									<p class="difficulty-label">Difficulty</p>
+									<div class="digital-display">
+										<li class="game-mode"></li>
+										<li class="difficulty-level">#</li>
+									</div>
+								</section>
+									<div class="button-container">
+										<li class="play-button">Start</li>
+										<li class="set-difficulty-button">Difficulty</li>
+										<li class="reset-button">Reset</li>
+										<li class="game-mode-button">Mode</li>
+									</div>
 							</div>
 						</section>
 					</div>
