Added timer based scoring and timer bar indicator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<body>
 		<header>
 			<h1>Simon</h1>
-			<h2>Repeat after me . . .</h2>
 		</header>
 		<main>
 			<section class="instruction-modal hidden">
@@ -25,6 +24,18 @@
 			<section class="game-area">
 				<section class="score-board">
 					<p class="score">Score: <span class="current-score-value"></span></p>
+					<div class="timer-bar">
+						<li class="timer-segment black" data-segmentid="2"></li>
+						<li class="timer-segment black" data-segmentid="3"></li>
+						<li class="timer-segment black" data-segmentid="1"></li>
+						<li class="timer-segment black" data-segmentid="4"></li>
+						<li class="timer-segment black" data-segmentid="5"></li>
+						<li class="timer-segment black" data-segmentid="6"></li>
+						<li class="timer-segment black" data-segmentid="7"></li>
+						<li class="timer-segment black" data-segmentid="8"></li>
+						<li class="timer-segment black" data-segmentid="9"></li>
+						<li class="timer-segment black" data-segmentid="10"></li>
+					</div>
 					<p class="top-score">
 						Top Score: <span class="top-score-value"></span>
 					</p>
