Corrected layout issues from ul addition

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<li class="timer-segment black" data-segmentid="8"></li>
 						<li class="timer-segment black" data-segmentid="9"></li>
 						<li class="timer-segment black" data-segmentid="10"></li>
-					</div>
+					</ul>
 					<p class="top-score">
 						Top Score: <span class="top-score-value"></span>
 					</p>
@@ -59,7 +59,7 @@
 						<div class="game-button yellow" id="3"></div>
 						<div class="game-button blue" id="4"></div>
 						<div class="game-controls-container">
-							<div class="game-controls">
+							<section class="game-controls">
 								<h3 class="game-logo">SIMON</h3>
 								<section class="info-center">
 									<p class="game-mode-label">Game Mode</p>
@@ -75,7 +75,7 @@
 										<li class="reset-button">Reset</li>
 										<li class="game-mode-button">Mode</li>
 									</ul>
-							</div>
+							</section>
 						</div>
 					</div>
 				</section>
