--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		<title>Simon</title>
 		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" />
-		<script defer src="game-board-effects.js"></script>
-		<script defer src="game-logic.js"></script>
-		<script defer src="instructions.js"></script>
+
+		<script defer src="js/game-board-effects.js"></script>
+		<script defer src="js/game-logic.js"></script>
+		<script defer src="js/instructions.js"></script>
 	</head>
 	<body>
 		<header>
